Fix language error

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -1,9 +1,8 @@
-menu.imprint: Imprint
-menu.about: About Us
-menu.committees: Committees
-menu.guest-speakers: Guest Speakers
-menu.location: Location
-menu.sponsors: Sponsors
-cta_section.message:
-menu.privacy: Privacy Policy
-cta_banner.message: Lorem ipsum dolor sit amet, consectetur adipiscing elit!
+menu.imprint: "Imprint"
+menu.about: "About Us"
+menu.committees: "Committees"
+menu.guest-speakers: "Guest Speakers"
+menu.location: "Location"
+menu.sponsors: "Sponsors"
+menu.privacy: "Privacy Policy"
+cta_banner.message: "Lorem ipsum dolor sit amet, consectetur adipiscing elit!"
